[package]
name = "schismrs-lsc2"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
log = "0.4.20"
schismrs-mesh = { version = "*",  path = "../schismrs-mesh" }
thiserror = "1.0.56"
pretty_env_logger = "0.5.0"
derive_builder = "0.12.0"
figment = { version = "0.10.13", features = ["env", "yaml", "toml", "json"] }
linfa-clustering = { version = "0.7.0", features = ["ndarray-linalg"] }
linfa = "0.7.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-stats = "0.5.1"
rayon = "1.8.0"
humantime = "2.1.0"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }
