[package]
name = "schismrs-vgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
log = "0.4.20"
schismrs-hgrid = { git = "https://github.com/jreniel/schismrs-hgrid.git" }
thiserror = "1.0.56"
pretty_env_logger = "0.5.0"
derive_builder = "0.12.0"
linfa-clustering = { version = "0.7.0", features = ["ndarray-linalg"] }
linfa = "0.7.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-stats = "0.5.1"
rayon = "1.8.0"
humantime = "2.1.0"
libm = "0.2.8"
plotly = { version = "0.8.4", features = ["ndarray"] }

