[package]
name = "schismrs-vgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
log = "0.4.20"
schismrs-hgrid = { git = "https://github.com/jreniel/schismrs-hgrid.git" }
thiserror = "1.0.56"
pretty_env_logger = "0.5.0"
derive_builder = "0.12.0"
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-stats = "0.6"
rayon = "1.8.0"
humantime = "2.1.0"
libm = "0.2.8"
plotly = { version = "0.8.4", features = ["ndarray"] }
csv = "1.3.1"

# TUI dependencies
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
anyhow = "1.0"

[[bin]]
name = "vqs-designer"
path = "src/bin/vqs_designer.rs"

